--- a/website_files/main.css
+++ b/website_files/main.css
@@ -1,117 +1,1 @@
-* {
-	margin: 0;
-	padding: 0;	
-}
-html, body {
-	color: #1e73e9;
-	font-family: Open Sans, Arial, sans-serif;
-	font-weight: 700;
-	height: 90px;
-	margin: 0 !important;
-	padding: 0 !important;
-	width: 728px;
-}
-img {
-	border: none;
-}
-#ad-container {
-	height: 100%;
-	position: relative;
-	width: 100%;
-}
-#ad {
-	border: solid #000 1px;
-	box-sizing: border-box;
-	cursor: pointer;
-	display: block;
-	height: 100%;
-	left: 0;
-	overflow: hidden;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	background:	url(main.jpg) no-repeat;
-}
-#cta {
-	right: 0;
-	position: absolute;
-	bottom: 35px;
-	width: 95%;
-	margin: 0 2.5%;
-	text-align: center;
-}
-#cta {
-	bottom: 20px;
-	padding: 10px;
-	margin: auto;
-	width: auto;
-}
-#ZipCode:focus, .button:focus {
-    outline: 0;
-}
-#ZipCode {
-	border: 1px solid #ACACAC;
-	border-radius: 3px;
-	box-sizing: border-box;
-	color: #ACACAC;
-	display: inline-block;
-	font-size: 1em;
-	font-weight: 100;
-	height:	100%;
-	line-height: normal;
-	margin: 0;
-	padding: 0 .8em;
-	text-align: center;
-	width: 100px;
-	-webkit-appearance: none;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	font-weight: 400;
-	font-family: "Open Sans",Arial,Verdana,sans-serif;
-}
-.button {
-	border: none;
-	color: #fff;
-	cursor: pointer;
-	display: inline-block;
-	font-family: Raleway,Arial,Verdana,sans-serif;
-	font-size: 1.1em;
-	font-weight: 600;
-	height: 100%;
-	line-height: 1;
-	position: relative;
-	padding: 0 2em;
-	text-align: center;
-	text-decoration: none;
-	white-space: nowrap;
-	-webkit-appearance: none;
-	border-radius: 4px;
-	/*-webkit-transition: background .5s,color .5s;
-	-moz-transition: background .5s,color .5s;
-	-ms-transition: background .5s,color .5s;
-	transition: background .5s,color .5s;*/
-	background: #ff6600;
-	/*background: -webkit-linear-gradient(top,#ff9c00 0%,#ff6600 100%);
-	background: -moz-linear-gradient(top,#ff9c00 0%,#ff6600 100%);
-	background: linear-gradient(to bottom,#ff9c00 0%,#ff6600 100%);
-	background-size: auto 200%;*/
-}
-.button:hover {
-	/*background-position: 0 100% !important;
-	-webkit-transition: all 0s;
-	-moz-transition: all 0s;
-	-ms-transition: all 0s;
-	transition: all 0s*/
-}
-#cta #ZipCode, #cta .button {
-	height:	45px;
-}
-#cta .button {
-	/*position: absolute;*/
-}
-#logo {
-	bottom: 10px;
-	position: absolute;
-	right: 10px;
-}
+html,body{padding:0;margin:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}html{font-size:1em}body{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}a img,:link img,:visited img{border:0}.sprite{background:url('sprite-s5085ca87bd.png');position:absolute}@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min—moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx){.sprite{background:url('sprite2x-s8fe1a028d9.png');background-size:151px 1106px}}.branding{background-position:0 0;height:17px;width:80px}.cta{background-position:0 -19px;height:25px;width:87px}.device_1{background-position:0 -46px;height:187px;width:146px}.device_2{background-position:0 -235px;height:187px;width:146px}.device_3{background-position:0 -424px;height:171px;width:94px}.headline_1{background-position:0 -597px;height:126px;width:127px}.headline_2{background-position:0 -725px;height:121px;width:113px}.headline_3{background-position:0 -848px;height:147px;width:107px}.headline_4{background-position:0 -997px;height:82px;width:151px}.subcopy{background-position:0 -1081px;height:25px;width:141px}.alpha-0{opacity:0}.gpu{-webkit-backface-visibility:hidden;backface-visibility:hidden;-webkit-transform:translateZ(0);transform:translateZ(0)}#ad_content{background:#e4e5e3;border:1px solid black;box-sizing:border-box;cursor:pointer;overflow:hidden;position:absolute;width:300px;height:250px}#ad_content *{position:absolute}#branding{bottom:20px;left:20px}.headline{top:20px;left:20px}#device_1,#device_2{bottom:0;right:7px}#device_3{top:20px;right:13px}#subcopy{top:118px;left:20px}#cta{bottom:20px;right:20px}
